--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <span class="author-block">
                             <a href="https://dnabanita7.github.io/">Nabanita Dash</a><sup>1</sup>,</span>
                             <span class="author-block">
-                            <a href="www.linkedin.com/in/ayush-kaura">Ayush Kaura</a><sup>1</sup>,</span>
+                            <a href="https://www.linkedin.com/in/ayush-kaura">Ayush Kaura</a><sup>1</sup>,</span>
                             <span class="author-block">
                             <a href="https://www.linkedin.com/in/sssshivvvv/">Shivam Singh</a><sup>1</sup>,</span>                            
                             <span class="author-block">
@@ -78,7 +78,7 @@
                         <div class="column has-text-centered">
                             <div class="publication-links">
                                 <span class="link-block">
-                                    <a href="./static/ECMR2025_paper_118.pdf.pdf" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                                    <a href="./static/ECMR__25__Anticipate_Adapt_Act.pdf" target="_blank" class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-file-pdf"></i>
                                         </span>
